added front end gameplay functionality to place div to highlight location of player's click

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -5,6 +5,7 @@
 }
 
 .gameplay {
+    position: relative;
     width:100%;
     padding: 3rem 3rem 3rem 3rem;
 
@@ -14,5 +15,11 @@
     width:100%;
     height:100%;
     object-fit: contain;
+}
+
+.select-div {
+    position: absolute;
+    /* top: 30px;
+    left: 30px; */
 }
 
