Corrected firebase initalization, set up game database documents, set up functionality to pull data from firebase documents

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -63,6 +63,8 @@ Main Container Styles
   height: 5vh;
   display: flex;
   background-color: var(--sub-bckgnd);
+  /* position: fixed;
+  z-index: 10; */
 }
 .main-content {
   width: 100vw;
