--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -54,3 +54,26 @@
     color: white;
 }
 
+.score-div {
+    position: fixed;
+    top: 5vh;
+    left: 0px;
+    width: 100%;
+    /* border: 2px solid red; */
+}
+
+.score-display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 100%; */
+    height: 30px;
+    background-color: rgba(200, 200, 200, 0.75);
+}
+
+.score-display p {
+    font-size: 2rem;
+    padding: 0rem 0.75rem 0rem 0.75rem;
+    border-radius: .5rem;
+}
+
