refactored popup display logic to be controlled by class vs conditional rendering

--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -19,6 +19,11 @@
 
 .select-div {
     position: absolute;
+    visibility: hidden;
+}
+
+.select-div.visable {
+    visibility: visible;
 }
 
 .select-highlight {
