--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -84,6 +84,62 @@
 
 .correct {
     color: green;
-    
+}
+
+.end-game {
+    position: absolute;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: 4s;
+}
+
+.end-game.game-over {
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background-color: rgba(0, 0, 0, 0.50);
+    visibility: visible;
+}
+
+.leaderboard-in {
+    background-color: var(--sub-bckgnd);
+    padding: 2rem 2rem 2rem 2rem;
+    border-radius: .75rem;
+    box-shadow: 3px 5px rgba(0, 0, 0, 0.50);
+}
+
+.leaderboard-in p:nth-child(1) {
+    font-size: 2rem;
+    padding-bottom: 0.5rem;
+}
+
+.leaderboard-in p:nth-child(2) {
+    font-size: 1.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.leaderboard-in input {
+    font-size: 1.5rem;
+    border-radius: 0.25rem;
+    border: none;
+    margin-right: 1rem;
+    margin-bottom: 0.5rem;
+    padding: 0.3rem 0.3rem 0.3rem 0.3rem;
+}
+
+.leaderboard-in button {
+    font-size: 1.5rem;
+    padding: 0.3rem 0.3rem 0.3rem 0.3rem;
+    border-radius: 0.25rem;
+    border: none;
+}
+
+.leaderboard-in button:hover {
+    background-color: var(--sub-text);
 }
 
