--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -1,6 +1,6 @@
 .game-container{
     width:100vw;
-    min-height: 95vh;
+    min-height: 100vh;
     background-color: var(--misc-two);
 }
 
@@ -42,7 +42,7 @@
     display: flex;
     justify-content: flex-start;
     gap: .5rem;
-    background-color: rgba(200, 200, 200, 0.75);
+    background-color: rgba(200, 200, 200, 0.85);
     border-radius: .5rem;
     top: -70px;
     left: -130px;
@@ -60,24 +60,25 @@
 }
 
 .score-div {
-    position: fixed;
-    top: 5vh;
-    left: 0px;
-    width: 100%;
+    /* top: -10vh;
+    left: 20vw;
+    width: 60vw;
+    height: 10vh;
+    z-index: 2; */
     /* border: 2px solid red; */
-}
-
-.score-display {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    /* width: 100%; */
-    height: 30px;
-    background-color: rgba(200, 200, 200, 0.75);
+    gap: 1rem;
+    background-color: var(--sh-dk);
+    padding: 1rem 2rem 1rem 2rem;
+    border-radius: 2rem;
 }
 
-.score-display p {
-    font-size: 2rem;
+
+.score-div p {
+    font-size: 2.5rem;
     padding: 0rem 0.75rem 0rem 0.75rem;
     border-radius: .5rem;
 }
@@ -101,45 +102,101 @@
 .end-game.game-over {
     width: 100%;
     height: 100%;
-    z-index: 5;
     background-color: rgba(0, 0, 0, 0.50);
     visibility: visible;
 }
 
 .leaderboard-in {
-    background-color: var(--sub-bckgnd);
+    max-width: 400px;
+    background-color: var(--main-bckgnd);
     padding: 2rem 2rem 2rem 2rem;
     border-radius: .75rem;
     box-shadow: 3px 5px rgba(0, 0, 0, 0.50);
 }
 
 .leaderboard-in p:nth-child(1) {
-    font-size: 2rem;
-    padding-bottom: 0.5rem;
+    font-size: 3rem;
+    padding-bottom: 1rem;
+    color: var(--sub-text-lt)
 }
 
 .leaderboard-in p:nth-child(2) {
-    font-size: 1.5rem;
-    padding-bottom: 0.5rem;
+    font-size: 2rem;
+    padding-bottom: 1rem;
+    color: var(--sub-text-dk)
+}
+
+.leaderboard-in div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 .leaderboard-in input {
     font-size: 1.5rem;
     border-radius: 0.25rem;
     border: none;
-    margin-right: 1rem;
-    margin-bottom: 0.5rem;
-    padding: 0.3rem 0.3rem 0.3rem 0.3rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    flex-grow: 1;
 }
 
 .leaderboard-in button {
     font-size: 1.5rem;
-    padding: 0.3rem 0.3rem 0.3rem 0.3rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     border-radius: 0.25rem;
     border: none;
+    transition: all 0.3s;
 }
 
 .leaderboard-in button:hover {
-    background-color: var(--sub-text);
+    background-color: var(--sh-lt);
+    color: var(--sub-text);
+    transition: all 0.3s;
+}
+
+
+#score-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#score-item img {
+    width: 3.5rem;
+}
+
+.score-status {
+    display: flex;
+    flex-direction: row;
+}
+
+.svg-container {
+    position: relative;
+    width: 2.5rem;
+}
+
+.svg-container svg {
+    /* width: 100%; */
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    transform: scale(1);
+    fill: transparent;
+}
+
+
+#score-item.correct svg {
+    fill: var(--g1);
+}
+
+#error-text {
+    padding-top: 1rem;
+    font-size: 1.5rem;
+    color: var(--error-red);
+
 }
 
