--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -30,9 +30,18 @@
     left: 0;
     width: 100%;
     height: 0;
-    background-color: var(--main-bckgnd);
+    background-color: rgba(0,0,0,0.70);
     overflow: hidden;
     transition: 0.5s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay p {
+    font-size: 3rem;
+    color: var(--sub-text-lt);
 }
 
 .game-1:hover > .overlay {
