Updated misc styles including flavicon, cleaned up code notes

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -42,6 +42,7 @@ table {
 
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 * {
   box-sizing: border-box;
   font-size: 10px;
@@ -50,28 +51,14 @@ table {
   --main-text: #2B4570;
   --sub-text-lt: #ffffff;
   --sub-text-dk: #909090;
-  --highlight-text: #E49273;
-
+  --highlight-text: #ec4b11;
   --main-bckgnd: #2b2b2b;
   --sub-bckgnd: #A8D0DB;
-
   --g1: rgb(8, 137, 8);
   --error-red: rgb(202, 8, 8);
-
-
   --sh-lt: rgba(255,255,255,0.25);
   --sh-dk: rgba(0, 0, 0, 0.15);
 
-
-
-
-  
-  --sub-text: #E49273;
-  
-  --misc-one: #6E0E0A;
-  --misc-two: #2b2b2b;
-  --misc-three: #F2BB05;
-  --misc-four: #D74E09;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -83,14 +70,12 @@ Main Container Styles
 .header {
   width: 100vw;
   height: 10vh;
+  min-height: 70px;
   display: flex;
   background-color: var(--sub-bckgnd);
   position: sticky;
   top: 0px;
   z-index: 1;
-  /* position: fixed;
-  z-index: 10; */
-
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -110,18 +95,16 @@ Header Styles
 
 .header-logo-all {
   position: relative;
-  /* width: 100%; */
   height: 100%;
-  /* overflow-y: hidden; */
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 1rem; */
 }
 
 .header-logo-all svg {
   position: relative;
   height: 18vh;
+  min-height: 100px;
   transition: all 0.3s;
 }
 
